fix menus hover and contrast equalizer

--- a/data/themes/darktable.css
+++ b/data/themes/darktable.css
@@ -101,7 +101,7 @@
 @define-color button_focus_fg @grey_75;
 @define-color button_checked_bg @grey_45;
 @define-color button_checked_fg @grey_85;
-@define-color button_hover_bg @grey_55;
+@define-color button_hover_bg @grey_50;
 @define-color button_hover_fg @grey_15;
 
 /* text fields */
@@ -1106,9 +1106,10 @@ combobox window *:hover,
 button:hover,
 button:hover label,
 button:hover cellview,
-menuitem:hover cellview,
-menuitem:hover arrow,
-menuitem:hover label,
+notebook tab:hover label,
+#header-toolbar menuitem:hover *,
+#lib-plugin-ui menuitem:hover *,
+#preferences_notebook menuitem:hover *,
 #recent-collection-button:hover,
 #history-button:hover,
 #iop-plugin-ui button:hover,
@@ -1126,6 +1127,8 @@ menuitem:hover label,
 
 * button:focus,
 button:focus,
+button:focus label,
+button:focus cellview,
 #recent-collection-button:focus,
 #history-button:focus,
 #iop-plugin-ui button:focus,
@@ -1141,8 +1144,10 @@ button:focus,
 button:focus,
 button:focus label,
 button:focus cellview,
-menuitem:focus cellview,
-combobox window:focus *,
+notebook tab:focus label,
+#header-toolbar menuitem:focus *,
+#lib-plugin-ui menuitem:focus *,
+#preferences_notebook menuitem:focus *,
 #recent-collection-button:focus,
 #history-button:focus,
 #iop-plugin-ui button:focus,
